[gd_scene load_steps=25 format=2]

[ext_resource path="res://src/Actors/Modules/Enemy/DamageOnTouch.gd" type="Script" id=1]
[ext_resource path="res://src/Actors/Bosses/SatanSigma/sigma_lance.res" type="SpriteFrames" id=2]
[ext_resource path="res://src/Actors/Bosses/SatanSigma/Lance.gd" type="Script" id=3]
[ext_resource path="res://src/Effects/Materials/lance_fire_particles.tres" type="Material" id=4]
[ext_resource path="res://src/Effects/Textures/sigma_particles2.png" type="Texture" id=5]
[ext_resource path="res://src/Effects/Textures/sigma_trail.png" type="Texture" id=6]
[ext_resource path="res://src/Sounds/Rooster - Wallhit.ogg" type="AudioStream" id=7]
[ext_resource path="res://src/Actors/NewStateMachine/audioplayer.gd" type="Script" id=8]
[ext_resource path="res://src/Effects/Materials/lance_particles.tres" type="Material" id=9]
[ext_resource path="res://src/Effects/Materials/sigma_particles_mat.tres" type="Material" id=10]
[ext_resource path="res://src/Effects/Textures/sigma_particles.png" type="Texture" id=11]

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 160, 21 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 6 )
region = Rect2( 0, 21, 160, 21 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 6 )
region = Rect2( 0, 42, 160, 21 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 6 )
region = Rect2( 0, 63, 160, 21 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 6 )
region = Rect2( 0, 84, 160, 21 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 6 )
region = Rect2( 0, 105, 160, 21 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 6 )
region = Rect2( 0, 126, 160, 21 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 6 )
region = Rect2( 0, 147, 160, 21 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 6 )
region = Rect2( 0, 168, 160, 21 )

[sub_resource type="SpriteFrames" id=12]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), null ],
"loop": false,
"name": "default",
"speed": 30.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 1.5, 56 )

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 1.5, 128 )

[sub_resource type="CanvasItemMaterial" id=2]
particles_animation = true
particles_anim_h_frames = 3
particles_anim_v_frames = 3
particles_anim_loop = false

[node name="Lance" type="Node2D"]
position = Vector2( 113, 179 )
script = ExtResource( 3 )

[node name="animatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -64 )
frames = ExtResource( 2 )
animation = "loop"
playing = true

[node name="trail" type="AnimatedSprite" parent="."]
position = Vector2( 0, -64 )
frames = SubResource( 12 )

[node name="trail2" type="AnimatedSprite" parent="."]
position = Vector2( 0, -126 )
frames = SubResource( 12 )

[node name="trail3" type="AnimatedSprite" parent="."]
position = Vector2( 73, -186 )
frames = SubResource( 12 )
offset = Vector2( -73, 0 )

[node name="trail4" type="AnimatedSprite" parent="."]
position = Vector2( 0, -252 )
frames = SubResource( 12 )

[node name="DamageOnTouch" type="Node2D" parent="."]
script = ExtResource( 1 )
damage = 12.0

[node name="area2D" type="Area2D" parent="DamageOnTouch"]
collision_layer = 0
collision_mask = 2

[node name="collisionShape2D" type="CollisionShape2D" parent="DamageOnTouch/area2D"]
position = Vector2( -5, -46 )
shape = SubResource( 1 )

[node name="DamageOnTouch2" type="Node2D" parent="."]
script = ExtResource( 1 )
damage = 12.0

[node name="area2D" type="Area2D" parent="DamageOnTouch2"]
collision_layer = 0
collision_mask = 2

[node name="collisionShape2D" type="CollisionShape2D" parent="DamageOnTouch2/area2D"]
position = Vector2( -5, -230 )
shape = SubResource( 13 )

[node name="projectile_sfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
volume_db = -7.0
autoplay = true
max_distance = 600.0
bus = "SFX"
script = ExtResource( 8 )

[node name="firetip" type="Particles2D" parent="."]
material = SubResource( 2 )
position = Vector2( 1, -2 )
z_index = 1
amount = 6
lifetime = 0.5
local_coords = false
process_material = ExtResource( 4 )
texture = ExtResource( 5 )

[node name="evilfire_particles" type="Particles2D" parent="."]
material = ExtResource( 10 )
position = Vector2( 0, -49 )
z_index = -1
amount = 10
lifetime = 0.5
randomness = 0.3
local_coords = false
process_material = ExtResource( 9 )
texture = ExtResource( 11 )
